--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,7 @@ rich==13.9.4
 rich-toolkit==0.12.0
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 starlette==0.41.3
 typer==0.15.1
 typing_extensions==4.12.2
