installed pyjwt & bcrypt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.7.0
+bcrypt==4.2.1
 certifi==2024.8.30
 click==8.1.7
 colorama==0.4.6
@@ -19,6 +20,7 @@ mdurl==0.1.2
 pydantic==2.10.3
 pydantic_core==2.27.1
 Pygments==2.18.0
+PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.19
 PyYAML==6.0.2
