--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
+alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
 bcrypt==4.2.1
 certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 dnspython==2.7.0
@@ -14,16 +16,19 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.4
+Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 pydantic==2.10.3
+pydantic-settings==2.6.1
 pydantic_core==2.27.1
 Pygments==2.18.0
 PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.19
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.12.0
 shellingham==1.5.4
@@ -32,6 +37,7 @@ SQLAlchemy==2.0.36
 starlette==0.41.3
 typer==0.15.1
 typing_extensions==4.12.2
+urllib3==2.2.3
 uvicorn==0.32.1
 watchfiles==1.0.0
 websockets==14.1
